// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generate Client Code: client code 1`] = `
"import _test_assets_pages_index_vue from '/test/assets/pages/index.vue'

const routes = [
  {
    \\"name\\": \\"[...all].vue\\",
    \\"path\\": \\"/[...all].vue\\",
    \\"component\\": () => import('/test/assets/pages/[...all].vue'),
    \\"props\\": true
  },
  {
    \\"name\\": \\"about.vue\\",
    \\"path\\": \\"/about.vue\\",
    \\"component\\": () => import('/test/assets/pages/about.vue'),
    \\"props\\": true
  },
  {
    \\"name\\": \\"components.vue\\",
    \\"path\\": \\"/components.vue\\",
    \\"component\\": () => import('/test/assets/pages/components.vue'),
    \\"props\\": true
  },
  {
    \\"name\\": \\"name-override\\",
    \\"path\\": \\"/index.vue\\",
    \\"component\\": _test_assets_pages_index_vue,
    \\"props\\": true,
    \\"meta\\": {
      \\"requiresAuth\\": false
    }
  },
  {
    \\"name\\": \\"sensor-current.vue\\",
    \\"path\\": \\"/:sensor/current.vue\\",
    \\"component\\": () => import('/test/assets/pages/[sensor]/current.vue'),
    \\"props\\": true
  },
  {
    \\"name\\": \\"about-index.vue\\",
    \\"path\\": \\"/about/index.vue\\",
    \\"component\\": () => import('/test/assets/pages/about/index.vue'),
    \\"props\\": true
  },
  {
    \\"name\\": \\"name-override\\",
    \\"path\\": \\"/blog/[id].vue\\",
    \\"component\\": () => import('/test/assets/pages/blog/[id].vue'),
    \\"props\\": true,
    \\"meta\\": {
      \\"requiresAuth\\": false
    }
  },
  {
    \\"name\\": \\"blog-index.vue\\",
    \\"path\\": \\"/blog/index.vue\\",
    \\"component\\": () => import('/test/assets/pages/blog/index.vue'),
    \\"props\\": true
  },
  {
    \\"name\\": \\"blog-today-index.vue\\",
    \\"path\\": \\"/blog/today/index.vue\\",
    \\"component\\": () => import('/test/assets/pages/blog/today/index.vue'),
    \\"props\\": true
  }
]

export default routes"
`;

exports[`Generate Nuxt Style Routes: nuxt style routes 1`] = `
Array [
  Object {
    "component": "/test/assets/nuxt-pages/_.vue",
    "name": ".vue",
    "path": "/:.vue",
    "props": true,
  },
  Object {
    "component": "/test/assets/nuxt-pages/about.vue",
    "name": "about.vue",
    "path": "/about.vue",
    "props": true,
  },
  Object {
    "component": "/test/assets/nuxt-pages/components.vue",
    "name": "components.vue",
    "path": "/components.vue",
    "props": true,
  },
  Object {
    "component": "/test/assets/nuxt-pages/index.vue",
    "meta": Object {
      "requiresAuth": false,
    },
    "name": "name-override",
    "path": "/index.vue",
    "props": true,
  },
  Object {
    "component": "/test/assets/nuxt-pages/_sensor/current.vue",
    "name": "sensor-current.vue",
    "path": "/:sensor/current.vue",
    "props": true,
  },
  Object {
    "component": "/test/assets/nuxt-pages/about/index.vue",
    "name": "about-index.vue",
    "path": "/about/index.vue",
    "props": true,
  },
  Object {
    "component": "/test/assets/nuxt-pages/blog/_id.vue",
    "name": "blog-id.vue",
    "path": "/blog/:id.vue",
    "props": true,
  },
  Object {
    "component": "/test/assets/nuxt-pages/blog/index.vue",
    "name": "blog-index.vue",
    "path": "/blog/index.vue",
    "props": true,
  },
  Object {
    "component": "/test/assets/nuxt-pages/blog/today/index.vue",
    "name": "blog-today-index.vue",
    "path": "/blog/today/index.vue",
    "props": true,
  },
]
`;

exports[`Generate Routes: routes 1`] = `
Array [
  Object {
    "component": "/test/assets/pages/[...all].vue",
    "name": "[...all].vue",
    "path": "/[...all].vue",
    "props": true,
  },
  Object {
    "component": "/test/assets/pages/about.vue",
    "name": "about.vue",
    "path": "/about.vue",
    "props": true,
  },
  Object {
    "component": "/test/assets/pages/components.vue",
    "name": "components.vue",
    "path": "/components.vue",
    "props": true,
  },
  Object {
    "component": "/test/assets/pages/index.vue",
    "meta": Object {
      "requiresAuth": false,
    },
    "name": "name-override",
    "path": "/index.vue",
    "props": true,
  },
  Object {
    "component": "/test/assets/pages/[sensor]/current.vue",
    "name": "sensor-current.vue",
    "path": "/:sensor/current.vue",
    "props": true,
  },
  Object {
    "component": "/test/assets/pages/about/index.vue",
    "name": "about-index.vue",
    "path": "/about/index.vue",
    "props": true,
  },
  Object {
    "component": "/test/assets/pages/blog/[id].vue",
    "meta": Object {
      "requiresAuth": false,
    },
    "name": "name-override",
    "path": "/blog/[id].vue",
    "props": true,
  },
  Object {
    "component": "/test/assets/pages/blog/index.vue",
    "name": "blog-index.vue",
    "path": "/blog/index.vue",
    "props": true,
  },
  Object {
    "component": "/test/assets/pages/blog/today/index.vue",
    "name": "blog-today-index.vue",
    "path": "/blog/today/index.vue",
    "props": true,
  },
]
`;
